lesson-32/k8s/example-2/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-2
  # labels:
  #   elbv2.k8s.aws/pod-readiness-gate-inject: enabled
