lesson-32/k8s/example-2/deploy-svc-app-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-1
  namespace: example-2
  labels:
    app: kuber-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-1
  template:
    metadata:
      labels:
        app: http-server-1
    spec:
      containers:
      - name: kuber-app
        image: bakavets/kuber:v1.0
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-1
  namespace: example-2
spec:
  selector:
    app: http-server-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
